refactor: replace legacy workspace with mvci shell architecture